--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
     "@hotwired/turbo-rails": "^8.0.5",
-    "heroicons": "^2.1.5",
+    "lucide": "^0.453.0",
     "rollup": "^4.2.0",
     "stimulus-vite-helpers": "^3.1.0",
     "vite": "^5.0.0",
