feat: revert to rails 7.2.0

--- a/.env.sample
+++ b/.env.sample
@@ -1,3 +1,7 @@
 # These environment variables are needed to run the app locally.
 # Copy these into a file named .env to have them loaded automatically.
 SENTRY_DSN=
+AWS_BUCKET=
+AWS_REGION=
+AWS_SECRET_ACCESS_KEY=
+AWS_ACCESS_KEY_ID=
