--- a/package.json
+++ b/package.json
@@ -6,12 +6,8 @@
   },
   "scripts": {
     "start": "concurrently -i -k --kill-others-on-fail -p none 'RUBY_DEBUG_OPEN=true bin/rails s' 'bin/vite dev'",
-    "lint:js": "eslint 'app/{assets,components,frontend,javascript}/**/*.{cjs,js,jsx,ts,tsx}'",
-    "fix:js": "npm run -- lint:js --fix",
-    "lint": "npm-run-all lint:**",
-    "fix": "npm-run-all fix:**",
-    "lint:css": "stylelint 'app/{components,frontend,assets/stylesheets}/**/*.{css,scss}'",
-    "fix:css": "npm run -- lint:css --fix"
+    "lint": "yarn run eslint app/frontend",
+    "lint:fix": "yarn run eslint app/frontend --fix"
   },
   "dependencies": {
     "@hotwired/stimulus": "^3.2.2",
@@ -40,9 +36,6 @@
     "sass-embedded": "^1.77.8",
     "standard": "^17.1.0",
     "stylelint": "^16.8.1",
-    "stylelint-config-standard": "^36.0.1",
-    "stylelint-declaration-strict-value": "^1.10.6",
-    "stylelint-prettier": "^5.0.2",
     "tailwindcss": "^3.4.1",
     "vite-plugin-ruby": "^5.1.0"
   }
